<resources>
    <string name="app_name">Interface</string>
    <string name="date">28/02/2019</string>
    <string name="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum
    </string>
    <string name="titulo">Artigo sobre edição de imagens</string>
    <string name="autor">Nathany Salles</string>
    <string name="botao_proximo">Próximo</string>
    <string name="botao_voltar">Voltar</string>
</resources>
