<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/celular"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"/>
        <TextView
                android:text="@string/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/textView4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/textView2" android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/paragrafo"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.171"/>
        <Button
                android:text="@string/botao_proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.972"/>
        <Button
                android:text="@string/botao_voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/button"
                android:layout_marginEnd="24dp" android:layout_marginRight="24dp" android:layout_marginBottom="18dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:text="@string/autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="0.891"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>